--- a/app/components/booknow.module.css
+++ b/app/components/booknow.module.css
@@ -6,13 +6,6 @@
   padding-right: 2rem;
 }
 
-@media (min-width: 640px) {
-  .ctaSection {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-}
-
 .ctaWrapper {
   background-color: var(--primary-green-dark);
   border-radius: 4rem;
