--- a/app/components/testimonials.module.css
+++ b/app/components/testimonials.module.css
@@ -9,12 +9,6 @@
   padding: 0 2rem;
 }
 
-@media (min-width: 640px) {
-  .container {
-    padding: 0 5rem;
-  }
-}
-
 .header {
   text-align: center;
   margin-bottom: 5rem;
